rp-workspace/.nx/cache/terminalOutputs/2600828265048801574

 NX   Nx Daemon is not enabled. Assets and package.json files will not be updated when files change.

[2J[3J[H6:16:53 a. m. - Starting compilation in watch mode...

/MySources/RP-Requirements-Web/rp-workspace/apps/api/src/application/widgets/widgets.service.ts(37,48): error TS2345: Argument of type 'Partial<Widget>' is not assignable to parameter of type '_QueryDeepPartialEntity<Widget>'.
  Types of property 'config' are incompatible.
    Type 'WidgetConfig | undefined' is not assignable to type '(() => string) | _QueryDeepPartialEntity<WidgetConfig> | undefined'.
      Type 'WidgetConfig' is not assignable to type '(() => string) | _QueryDeepPartialEntity<WidgetConfig> | undefined'.
        Type 'WidgetConfig' is not assignable to type '_QueryDeepPartialEntity<WidgetConfig>'.
          'string' index signatures are incompatible.
            Type 'unknown' is not assignable to type '(() => string) | _QueryDeepPartialEntity<unknown> | undefined'.

6:16:58 a. m. - Found 1 error. Watching for file changes.
[2J[3J[H6:17:52 a. m. - File change detected. Starting incremental compilation...

/MySources/RP-Requirements-Web/rp-workspace/apps/api/src/application/widgets/widgets.service.ts(49,48): error TS2345: Argument of type 'Partial<Widget>' is not assignable to parameter of type '_QueryDeepPartialEntity<Widget>'.
  Types of property 'config' are incompatible.
    Type 'WidgetConfig | undefined' is not assignable to type '(() => string) | _QueryDeepPartialEntity<WidgetConfig> | undefined'.
      Type 'WidgetConfig' is not assignable to type '(() => string) | _QueryDeepPartialEntity<WidgetConfig> | undefined'.
        Type 'WidgetConfig' is not assignable to type '_QueryDeepPartialEntity<WidgetConfig>'.
          'string' index signatures are incompatible.
            Type 'unknown' is not assignable to type '(() => string) | _QueryDeepPartialEntity<unknown> | undefined'.

6:17:52 a. m. - Found 1 error. Watching for file changes.
[2J[3J[H6:18:20 a. m. - File change detected. Starting incremental compilation...


6:18:26 a. m. - Found 0 errors. Watching for file changes.
Starting inspector on localhost:9229 failed: address already in use

Error: Cannot find module '@domain/entities/sponsor.entity'
Require stack:
- c:\MySources\RP-Requirements-Web\rp-workspace\apps\api\dist\src\presentation\sponsors\sponsors.module.js
- c:\MySources\RP-Requirements-Web\rp-workspace\apps\api\dist\src\app.module.js
- c:\MySources\RP-Requirements-Web\rp-workspace\apps\api\dist\src\main.js
    at Function.<anonymous> (node:internal/modules/cjs/loader:1225:15)
    at Function.Module._resolveFilename (c:\MySources\RP-Requirements-Web\rp-workspace\apps\api\node_modules\tsconfig-paths\src\register.ts:115:36)
    at Function.<anonymous> (node:internal/modules/cjs/loader:1055:27)
    at Function.Module._load (c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\node-with-require-overrides.js:18:31)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (c:\MySources\RP-Requirements-Web\rp-workspace\apps\api\dist\src\presentation\sponsors\sponsors.module.js:12:26)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)


 NX  Process exited with code 1, waiting for changes to restart...

[2J[3J[H6:44:23 a. m. - File change detected. Starting incremental compilation...


6:44:24 a. m. - Found 0 errors. Watching for file changes.
[2J[3J[H6:44:24 a. m. - File change detected. Starting incremental compilation...


6:44:24 a. m. - Found 0 errors. Watching for file changes.
Debugger listening on ws://localhost:9229/fcf8743e-eba6-4e7e-9764-10f808fe93b8
Debugger listening on ws://localhost:9229/fcf8743e-eba6-4e7e-9764-10f808fe93b8
For help, see: https://nodejs.org/en/docs/inspector

[2J[3J[H6:44:26 a. m. - File change detected. Starting incremental compilation...


6:44:26 a. m. - Found 0 errors. Watching for file changes.
Starting inspector on localhost:9229 failed: address already in use

c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\node.impl.js:351
    throw new Error(`Could not find ${fileToRun}. Make sure your build succeeded.`);
          ^

Error: Could not find c:\MySources\RP-Requirements-Web\rp-workspace\apps\api\dist\src\main.js. Make sure your build succeeded.
    at fileToRunCorrectPath (c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\node.impl.js:351:11)
    at c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\node.impl.js:122:49
    at new Promise (<anonymous>)
    at Object.start (c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\node.impl.js:113:36)
    at async processQueue (c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\node.impl.js:78:13)
    at async Timeout._onTimeout (c:\MySources\RP-Requirements-Web\rp-workspace\node_modules\@nx\js\src\executors\node\lib\coalescing-debounce.js:24:40)

Node.js v22.14.0
